src/main/java/com/example/shortudy/global/error/GlobalExceptionHandler.java
package com.example.shortudy.global.error;

import org.springframework.web.bind.annotation.ControllerAdvice;

@ControllerAdvice
public class GlobalExceptionHandler {
}

